--- a/minigpt4/configs/models/minigpt_v2.yaml
+++ b/minigpt4/configs/models/minigpt_v2.yaml
@@ -11,7 +11,7 @@ model:
   # generation configs
   prompt: ""
 
-  llama_model: "../../Llama_2_7b_chat_hf/Llama-2-7b-chat-hf"
+  llama_model: "Llama-2-7b-chat-hf"
   lora_r: 64
   lora_alpha: 16
 
